force-app/main/default/objects/Email_Processing_Log__c/Email_Processing_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log of processed Gmail booking request emails</description>
    <label>Email Processing Log</label>
    <nameField>
        <displayFormat>EPL-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Processing Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>