force-app/main/default/objects/Email_Processing_Log__c/fields/Availability_Result_JSON__c.field-meta.xml
<CustomField>
    <fullName>Availability_Result_JSON__c</fullName>
    <description>JSON representation of the availability check result</description>
    <label>Availability Result JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>