force-app/main/default/objects/Email_Processing_Log__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <description>The Booking record created from this email thread</description>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Email Processing Logs</relationshipLabel>
    <relationshipName>Email_Processing_Logs</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>