force-app/main/default/objects/Email_Processing_Log__c/fields/Booking_Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>Booking_Request_JSON__c</fullName>
    <description>JSON representation of the parsed booking request</description>
    <label>Booking Request JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>