force-app/main/default/objects/Email_Processing_Log__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <description>Requested check-in date from the booking request</description>
    <label>Check-In Date</label>
    <type>Date</type>
</CustomField>