force-app/main/default/objects/Email_Processing_Log__c/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <description>Requested check-out date from the booking request</description>
    <label>Check-Out Date</label>
    <type>Date</type>
</CustomField>