force-app/main/default/objects/Email_Processing_Log__c/fields/Email_Intent__c.field-meta.xml
<CustomField>
    <fullName>Email_Intent__c</fullName>
    <description>The classified intent of this email determined by AI analysis</description>
    <label>Email Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New_Inquiry</fullName>
                <label>New Inquiry</label>
            </value>
            <value>
                <fullName>Follow_Up_Answer</fullName>
                <label>Follow-Up Answer</label>
            </value>
            <value>
                <fullName>Booking_Confirmation</fullName>
                <label>Booking Confirmation</label>
            </value>
            <value>
                <fullName>Booking_Rejection</fullName>
                <label>Booking Rejection</label>
            </value>
            <value>
                <fullName>General_Question</fullName>
                <label>General Question</label>
            </value>
            <value>
                <fullName>Modification_Request</fullName>
                <label>Modification Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>