force-app/main/default/objects/Email_Processing_Log__c/fields/Email_Thread__c.field-meta.xml
<CustomField>
    <fullName>Email_Thread__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Email Thread that groups this email with related messages in the conversation</description>
    <label>Email Thread</label>
    <referenceTo>Email_Thread__c</referenceTo>
    <relationshipLabel>Email Processing Logs</relationshipLabel>
    <relationshipName>Email_Processing_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>