force-app/main/default/objects/Email_Processing_Log__c/fields/Generated_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Generated_Email_Body__c</fullName>
    <description>The HTML body of the email response that was generated and sent</description>
    <label>Generated Email Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>