force-app/main/default/objects/Email_Processing_Log__c/fields/Generated_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Generated_Email_Subject__c</fullName>
    <description>The subject line of the email response that was generated and sent</description>
    <label>Generated Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>