force-app/main/default/objects/Email_Processing_Log__c/fields/Gmail_Connection_State__c.field-meta.xml
<CustomField>
    <fullName>Gmail_Connection_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Gmail connection that processed this email</description>
    <label>Gmail Connection State</label>
    <referenceTo>Gmail_Connection_State__c</referenceTo>
    <relationshipLabel>Email Processing Logs</relationshipLabel>
    <relationshipName>Email_Processing_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>