force-app/main/default/objects/Email_Processing_Log__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The hotel property associated with this email</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Email Processing Logs</relationshipLabel>
    <relationshipName>Email_Processing_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>