force-app/main/default/objects/Email_Processing_Log__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <description>Gmail message ID for deduplication</description>
    <externalId>true</externalId>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>