force-app/main/default/objects/Email_Processing_Log__c/fields/Original_Inquiry_Log__c.field-meta.xml
<CustomField>
    <fullName>Original_Inquiry_Log__c</fullName>
    <description>Reference to the original booking inquiry email log record for this thread</description>
    <label>Original Inquiry Log</label>
    <referenceTo>Email_Processing_Log__c</referenceTo>
    <relationshipLabel>Follow-Up Emails</relationshipLabel>
    <relationshipName>Follow_Up_Emails</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>