force-app/main/default/objects/Email_Processing_Log__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <description>Email address that received the booking request (maps to Location)</description>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>