force-app/main/default/objects/Email_Processing_Log__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>DateTime when the response email was sent</description>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>