force-app/main/default/objects/Email_Processing_Log__c/fields/Response_Sent__c.field-meta.xml
<CustomField>
    <fullName>Response_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a response email was successfully sent</description>
    <label>Response Sent</label>
    <type>Checkbox</type>
</CustomField>