force-app/main/default/objects/Email_Processing_Log__c/fields/Rooms_Available__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Available__c</fullName>
    <description>Number of rooms available based on inventory check</description>
    <label>Rooms Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>