force-app/main/default/objects/Email_Processing_Log__c/fields/Rooms_Requested__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Requested__c</fullName>
    <description>Number of rooms requested in the booking inquiry</description>
    <label>Rooms Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>