force-app/main/default/objects/Email_Processing_Log__c/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <description>Email address of the person who sent the booking request</description>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>