force-app/main/default/objects/Email_Processing_Log__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <description>Name of the person who sent the booking request</description>
    <label>Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>