force-app/main/default/objects/Email_Processing_Log__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Email subject line</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>