force-app/main/default/objects/Email_Processing_Log__c/fields/Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Thread_Id__c</fullName>
    <description>Gmail thread ID for reply threading</description>
    <label>Thread ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>